# clinical-rKOAprev

./: .gitignore  CITATION.cff  LICENSE  README.md  pyproject.toml  requirements.txt
archive/: README.md
archive/notes/: ELSA screening tool KOA - abstract OARSI fev 26.md  abstract  debug_last_run.txt  debug_output.txt  results.md  thesis_proposal_revised.md
archive/results_tree_models/: complete_case_drop_impact_by_feature.csv  data_missingness_after_prep.csv  data_value_exclusions_audit.csv  feature_missingness_and_imputation.csv  features_clinical.csv  features_full.csv  missing_outcomes_after_recode_before_missing_filter_ids.csv  missing_outcomes_before_any_outcome_rules_rows.csv  tree_models_comparison.csv  (+1 more)
data/: README.md
docs/: METHODOLOGY.md  PROJECT_LOG.md  REVIEW_NOTES.md
manuscript/: manuscript.md  newmanuscript.docx
results/: sensitivity_isolated_pf_audit.csv  sensitivity_summary_isolated_pf.csv
scripts/: 01_prepare_data.py  02_feature_selection.py  02_run_comparison.py  03_final_model_or.py  03_run_comparison.py  04_final_model_or.py  04_permutation_importance.py  05_permutation_importance.py  05_table1_descriptives.py  06_figures.py  06_table1_descriptives.py  07_figures.py  07_sensitivity_isolated_pf.py  08_sensitivity_isolated_pf.py  09_seed_stability.py  10_model_ci_brier.py  11_sensitivity_drop_surgery.py  12_nested_cv.py
supplementary/: ml_tuning.md  pf_ablation.md
tests/: conftest.py  test_evaluation_extra.py  test_regression_ci_brier.py  test_regression_manuscript_numbers.py  test_regression_nested.py  test_regression_selection.py  test_regression_variables.py  test_sensitivity.py  test_synthetic_data.py
(+116 files in other folders)
